<resources>
    <string name="app_name">GroupApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>

    <string name="header_web_front_ent">Web Front End</string>
    <string name="header_back_end">Back End</string>
    <string name="header_mobile">Mobile</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="android">Android</string>
    <string name="ios">iOS</string>
    <string name="windows">Windows</string>
    <string name="blackberry">Blackberry</string>
    <string name="ionic">Ionic</string>
    <string name="css">CSS</string>
    <string name="html">HTML</string>
    <string name="ruby">Ruby</string>
    <string name="php">PHP</string>
    <string name="python">Python</string>

    <string name="username_validation_msg">Username cannot be blank</string>
    <string name="login_success">Successfully Logged In !</string>
    <string name="pwd_validation_msg">Minimum 8 characters required</string>
    <string name="username_hint">Username</string>
    <string name="pwd_hint">Password</string>
    <string name="login_btn_txt">Iniciar</string>


    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="exit">Exit</string>
	<string name="dummy_long_text">
		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
	</string>
    <string name="register_btn_txt">Registrarse</string>
    <string name="correo_hint">Correo</string>
    <string name="contrasena_hint">Contraseña</string>
    <string name="nombre_hint">Nombre</string>
    <string name="apellidos_hint">Apellidos</string>
    <string name="nacimiento_hint">Nacimiento</string>
    <string name="celular_hint">Celular</string>
    <string name="continuar_btn_txt">Continuar</string>
    <string name="thumbnail">Llamar</string>


    <!-- Carreras -->
    <string-array name="profession_array">
        <item>Ingienria de Sistemas</item>
        <item>Marketing</item>
        <item>Telecomunicaciones</item>
    </string-array>
</resources>