<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.soloparaapasionados.groupapp.RegisterActivity">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:id="@+id/appbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--android:fitsSystemWindows="true">-->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="7dp"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!--</android.support.design.widget.AppBarLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:layout_below="@id/toolbar">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidos_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nacimiento_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutCelular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etCelular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/celular_hint" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:onClick="continuar_Click"
            android:text="@string/continuar_btn_txt"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>
