<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.soloparaapasionados.groupapp.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nombreappTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Groupapp"
            android:textSize="40dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_hint" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayoutContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/etContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:onClick="validateAndLogin"
            android:text="@string/login_btn_txt"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/colorPrimary"
            android:onClick="registrar_Click"
            android:text="@string/register_btn_txt"
            android:textColor="@android:color/white" />


    </LinearLayout>

</RelativeLayout>
